# clog

./: .clang-format  .gitignore  .tmuxinator.yml  CMakeLists.txt  README.md  clog.h  flake.nix  generate_release.sh  run_tests.sh
src/: clog.c  clog.h  main.c
tests/: main.c  main.cpp  module.c  module.cpp  module.h  module.hpp
